# ObservaShop

./: README.md  main.py  postman-collection.json  pyproject.toml
services/auth_service/: alembic.ini  pyproject.toml
services/auth_service/src/: main.py  start.py
services/auth_service/src/application/: user_service.py
services/auth_service/src/config/: config.py
services/auth_service/src/core/: exceptions.py
services/auth_service/src/infrastructure/: services.py
services/auth_service/src/infrastructure/database/: models.py  session.py
services/auth_service/src/infrastructure/database/alembic/: env.py
services/auth_service/src/infrastructure/database/alembic/versions/: 78c59c87ff5a_initial_schema.py
services/auth_service/src/infrastructure/http/: authz_client.py
services/auth_service/src/infrastructure/jwt/: __init__.py  jwt.py
services/auth_service/src/infrastructure/redis/: redis.py
services/auth_service/src/interfaces/http/: auth.py  schemas.py
services/notification_service/: alembic.ini  pyproject.toml
services/notification_service/src/: main.py  start.py
services/notification_service/src/application/: notification_service.py
services/notification_service/src/config/: config.py  logger_config.py
services/notification_service/src/core/: exceptions.py
services/notification_service/src/domain/: models.py
services/notification_service/src/events/: event_consumer.py  schemas.py  topics.py
services/notification_service/src/infrastructure/database/: models.py
services/notification_service/src/infrastructure/database/alembic/: env.py
services/notification_service/src/infrastructure/database/alembic/versions/: 1dd5a09d4d46_initial_schema.py
services/notification_service/src/infrastructure/email/: client.py
services/notification_service/src/infrastructure/kafka/: kafka_client.py  kafka_config.py  topic_manager.py
services/notification_service/src/infrastructure/redis/: redis.py
services/notification_service/src/interfaces/http/: notification.py  schemas.py
services/payment_service/: alembic.ini  pyproject.toml
services/payment_service/src/: main.py  start.py
services/payment_service/src/application/: payment_service.py
services/payment_service/src/config/: config.py
services/payment_service/src/core/: exceptions.py
services/payment_service/src/domain/: models.py
services/payment_service/src/infrastructure/: services.py
services/payment_service/src/infrastructure/clients/: order_client.py
services/payment_service/src/infrastructure/database/: models.py
services/payment_service/src/infrastructure/database/alembic/: env.py
services/payment_service/src/infrastructure/database/alembic/versions/: 1c8f889f8695_initial_schema.py  3ecb46a4529c_add_fields_to_payment_table.py
services/payment_service/src/interfaces/http/: payment.py  schemas.py
services/product_service/: pyproject.toml
services/product_service/src/: main.py  start.py
services/product_service/src/application/: category_service.py  product_service.py
services/product_service/src/config/: config.py
services/product_service/src/core/: exceptions.py
services/product_service/src/domain/: models.py
services/product_service/src/infrastructure/: services.py
services/product_service/src/infrastructure/database/alembic/: env.py
services/product_service/src/infrastructure/database/alembic/versions/: 98fdbda5e3c2_add_category_table.py  9a621b6450ee_add_is_active_field_to_product_model.py  b34563cd68c0_initial_schema.py  (+1 more)
services/product_service/src/infrastructure/jwt/: jwt.py
services/product_service/src/infrastructure/redis/: redis.py
services/product_service/src/interfaces/http/: category.py  product.py  schemas.py
shared/: pyproject.toml
(+130 files in other folders)
