[project]
name = "observashop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.2",
    "fastapi>=0.115.13",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.41",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.3",
]

[tool.uv.workspace]
members = [
    "services/analytics-service",
    "services/auth-service",
    "services/authz_service",
    "services/media-service",
    "services/notification-service",
    "services/order-service",
    "services/payment-service",
    "services/product-service",
]
