[project]
name = "observashop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.2",
    "fastapi>=0.115.13",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.41",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.3",
]

[tool.uv.workspace]
members = [
    "services/analytics_service",
    "services/auth_service",
    "services/authz_service",
    "services/media_service",
    "services/notification_service",
    "services/order_service",
    "services/payment_service",
    "services/product_service",
]
