[project]
name = "auth-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.2",
    "fastapi>=0.115.13",
    "prometheus-client>=0.22.1",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.41",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.3",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.5.0",
    "redis>=6.2.0",
    "pydantic[email]>=2.11.7",
    "pydantic-settings>=2.10.1",
    "loguru>=0.7.3",
    "bcrypt>=4.3.0",
    "httpx>=0.28.1",
]
